# hfest

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  read-huggingface.py
src/hfest/: cli.py
src/hfest/commands/: config.py  estimate_resource.py  estimate_size.py
src/hfest/utils/: config.py
tests/: test_cli.py  test_command_estimate_resource.py  test_command_estimate_size.py
