[project]
name = "hfest"
version = "0.1.0"
description = "hfest: estimate how many resources a hugging face model would require to run at minimal or recommended configuration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.30.2",
    "python-dotenv>=1.1.0",
]

[project.scripts]
hfest = "hfest.cli:main"

[project.urls]
"Homepage" = "https://github.com/rezanatha/hfest"
"Bug Tracker" = "https://github.com/rezanatha/hfest/issues"