[project]
name = "hfest"
dynamic = ["version"]
description = "hfest: estimate how many resources a hugging face model would require to run at minimal or recommended configuration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.30.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[tool.setuptools.dynamic]
version = {attr = "hfest.version.__version__"}

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
hfest = "hfest.cli:main"

[project.urls]
"Homepage" = "https://github.com/rezanatha/hfest"
"Bug Tracker" = "https://github.com/rezanatha/hfest/issues"
